# OwnedC

./: .gitignore  CMakeLists.txt  README.md  fix_stdlib.py
.github/workflows/: ci.yml
examples/: cjson_ownedc.c  demo.c  demo_allocator.c  demo_arena.c  demo_array.c  demo_channel.c  demo_cpp.cpp  demo_file.c  demo_full_showcase.c  demo_future.c  demo_generics.c  demo_hybrid_cheri.c  demo_json.c  demo_kernel.c  demo_mutex.c  demo_profiler.c  demo_raii.c  demo_rc.c  demo_rc_cycle.c  demo_region.c  demo_result.c  demo_socket.c  demo_string.c  demo_thread_safe.c  demo_threads.c  demo_vector.c  owned_http_server.c  real_libs_ownedc.c  sqlite_ownedc.c
include/: owned_json.h  ownedc.h  ownedc.hpp  ownedc_arena.h  ownedc_array.h  ownedc_channel.h  ownedc_cheri.h  ownedc_collections.h  ownedc_env.h  ownedc_file.h  ownedc_future.h  ownedc_generics.h  ownedc_mutex.h  ownedc_rc.h  ownedc_region.h  ownedc_result.h  ownedc_socket.h  ownedc_string.h  ownedc_thread.h
plugin/: OwnedCClangPlugin.cpp  README.md
src/: collections.c  diagnostics.c  owned_json.c  ownedc_arena.c  ownedc_array.c  ownedc_channel.c  ownedc_file.c  ownedc_future.c  ownedc_mutex.c  ownedc_rc.c  ownedc_socket.c  ownedc_string.c  ownedc_thread.c  region.c  runtime.c
tests/: benchmark.c  test_borrow.c  test_doublefree.c  test_hybrid_compile.c  test_leaks.c  test_lint.c  test_malloc.c  test_raii.c  test_region.c  test_static_analysis.c  test_thread_violation.c  test_threads.c  test_uaf.c  test_vector.c
tools/: ownedc-analyzer.py  ownedc_lint.c  ownedc_lint.py  ownedc_profiler.py
